# zk-ml-linear-regression

./: .gitignore  Cargo.toml
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
