[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" ,features = ["prove"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
nalgebra = "0.34.1"
rand = "0.9.2"
sha2 = "0.10"
anyhow = "1.0"
hex = "0.4"
plotters = "0.3.7"