[package]
name = "methods"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
risc0-zkvm = { version = "^3.0.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
risc0-build = { version = "^3.0.3" }

[package.metadata.risc0]
methods = ["guest" ]